oauth2-proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: auth.sudojoss.com
    http:
      paths:
        - path: /oauth2
          backend:
            serviceName: oauth2-proxy
            servicePort: 80
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - auth.sudojoss.com
